# Fractal-C

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  main.cpp
.github/workflows/: cmake-single-platform.yml
include/: BmpImage.h  Fractal.h  FractalImage.h  ImageFile.h  Pixel.h  PureImage.h  bmp.h  image.h  pixel.h
include/fractal/: Fractal.h  FractalImage.h  Julia.h  Mandelbrot.h  ModularMandelbrot.h  fractalUtils.h
include/gradient/: FunctionalGradient.h  Gradient.h  LookupGradient.h  SimpleGradient.h
src/: BmpImage.cpp  Fractal.cpp  Pixel.cpp  PureImage.cpp  benchmark.cpp  bmp.cpp  image.cpp
src/fractal/: FractalImage.cpp  Julia.cpp  Mandelbrot.cpp  ModularMandelbrot.cpp  fractalUtils.cpp
src/gradient/: FunctionalGradient.cpp  LookupGradient.cpp  SimpleGradient.cpp
tests/: test.cpp
